--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,33 @@
-librosa==0.11.0
+# Core dependencies for NeuTTS inference and training
+# IMPORTANT: numpy<2.0 required to avoid binary compatibility issues
+
+# ML Framework
+torch>=2.1.0
+torchaudio>=2.1.0
+
+# CRITICAL: numpy<2.0 to avoid pandas/sklearn binary compatibility errors
+numpy>=1.24.0,<2.0.0
+
+# Transformers (>=4.40.0 for HubertModel fix)
+transformers>=4.40.0
+huggingface_hub>=0.20.0
+
+# Audio
+librosa>=0.10.0
+soundfile>=0.12.0
 neucodec>=0.0.4
-numpy==2.2.6
-phonemizer==3.3.0
-resemble-perth==1.0.1
-soundfile==0.13.1
-torch==2.8.0
-transformers==4.56.1
+
+# Text processing
+phonemizer>=3.3.0
+
+# Training
+datasets>=2.14.0
+accelerate>=0.25.0
+omegaconf>=2.3.0
+fire>=0.5.0
+loguru>=0.7.0
+
+# Scientific (install after numpy)
+scipy>=1.10.0
+scikit-learn>=1.3.0
+pandas>=2.0.0
